--- a/Tracking_Deniers_Over_Time.ipynb
+++ b/Tracking_Deniers_Over_Time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,17 +44,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date                   period[M]\n",
+      "lat                      float64\n",
+      "lng                      float64\n",
+      "topic                     object\n",
+      "sentiment                float64\n",
+      "aggressiveness            object\n",
+      "gender                    object\n",
+      "created_at        datetime64[ns]\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>aggressiveness</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006-12</td>\n",
+       "      <td>36.072640</td>\n",
+       "      <td>-79.791980</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>-0.565028</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2006-12-17 19:43:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007-01</td>\n",
+       "      <td>36.112637</td>\n",
+       "      <td>-80.014484</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>-0.377974</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007-01-18 13:22:52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007-01</td>\n",
+       "      <td>25.963890</td>\n",
+       "      <td>-80.244170</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>0.567071</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>undefined</td>\n",
+       "      <td>2007-01-24 10:13:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007-03</td>\n",
+       "      <td>30.287986</td>\n",
+       "      <td>-97.778898</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>-0.253728</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007-03-03 15:23:53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2007-03</td>\n",
+       "      <td>37.779026</td>\n",
+       "      <td>-122.419906</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>-0.433604</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2007-03-13 23:03:07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      date        lat         lng             topic  sentiment  \\\n",
+       "0  2006-12  36.072640  -79.791980  Weather Extremes  -0.565028   \n",
+       "1  2007-01  36.112637  -80.014484  Weather Extremes  -0.377974   \n",
+       "2  2007-01  25.963890  -80.244170  Weather Extremes   0.567071   \n",
+       "3  2007-03  30.287986  -97.778898  Weather Extremes  -0.253728   \n",
+       "4  2007-03  37.779026 -122.419906  Weather Extremes  -0.433604   \n",
+       "\n",
+       "   aggressiveness     gender          created_at  \n",
+       "0      aggressive       male 2006-12-17 19:43:09  \n",
+       "1      aggressive       male 2007-01-18 13:22:52  \n",
+       "2  not aggressive  undefined 2007-01-24 10:13:18  \n",
+       "3  not aggressive       male 2007-03-03 15:23:53  \n",
+       "4      aggressive       male 2007-03-13 23:03:07  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read csv file & convert to appropriate datatypes\n",
+    "newfile = 'Resources/Climate_Deniers_Map.csv'\n",
+    "df = pd.read_csv(newfile)\n",
+    "\n",
+    "newdf = df.copy()\n",
+    "newdf['created_at'] = df['created_at'].astype('datetime64')\n",
+    "newdf['date'] = newdf['created_at'].dt.to_period('M')\n",
+    "\n",
+    "data = newdf.loc[:, ['date', 'lat', 'lng', 'topic', 'sentiment', 'aggressiveness', 'gender', 'created_at']]\n",
+    "print(data.dtypes)\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>date</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>aggressiveness</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2007-04-06 08:17:31</td>\n",
+       "      <td>2007-04</td>\n",
+       "      <td>35.227209</td>\n",
+       "      <td>-80.843083</td>\n",
+       "      <td>Donald Trump versus Science</td>\n",
+       "      <td>-0.604242</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007-03-31 12:16:59</td>\n",
+       "      <td>2007-03</td>\n",
+       "      <td>35.227090</td>\n",
+       "      <td>-80.843130</td>\n",
+       "      <td>Global stance</td>\n",
+       "      <td>-0.404815</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007-04-07 15:26:24</td>\n",
+       "      <td>2007-04</td>\n",
+       "      <td>30.271129</td>\n",
+       "      <td>-97.743700</td>\n",
+       "      <td>Ideological Positions on Global Warming</td>\n",
+       "      <td>-0.515978</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007-05-02 17:11:53</td>\n",
+       "      <td>2007-05</td>\n",
+       "      <td>50.666480</td>\n",
+       "      <td>-120.319200</td>\n",
+       "      <td>Impact of Resource Overconsumption</td>\n",
+       "      <td>-0.690117</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2007-04-20 18:17:23</td>\n",
+       "      <td>2007-04</td>\n",
+       "      <td>42.081156</td>\n",
+       "      <td>-87.980216</td>\n",
+       "      <td>Importance of Human Intervantion</td>\n",
+       "      <td>-0.359227</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2007-08-19 13:33:24</td>\n",
+       "      <td>2007-08</td>\n",
+       "      <td>51.508530</td>\n",
+       "      <td>-0.125740</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>-0.295054</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2007-04-12 03:40:27</td>\n",
+       "      <td>2007-04</td>\n",
+       "      <td>27.947520</td>\n",
+       "      <td>-82.458430</td>\n",
+       "      <td>Seriousness of Gas Emissions</td>\n",
+       "      <td>-0.456556</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2007-10-03 06:57:04</td>\n",
+       "      <td>2007-10</td>\n",
+       "      <td>-27.467940</td>\n",
+       "      <td>153.028090</td>\n",
+       "      <td>Significance of Pollution Awareness Events</td>\n",
+       "      <td>-0.737047</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2007-07-12 17:49:09</td>\n",
+       "      <td>2007-07</td>\n",
+       "      <td>38.895110</td>\n",
+       "      <td>-77.036370</td>\n",
+       "      <td>Undefined / One Word Hashtags</td>\n",
+       "      <td>0.761608</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2006-12-17 19:43:09</td>\n",
+       "      <td>2006-12</td>\n",
+       "      <td>36.072640</td>\n",
+       "      <td>-79.791980</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>-0.565028</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           created_at     date        lat         lng  \\\n",
+       "0 2007-04-06 08:17:31  2007-04  35.227209  -80.843083   \n",
+       "1 2007-03-31 12:16:59  2007-03  35.227090  -80.843130   \n",
+       "2 2007-04-07 15:26:24  2007-04  30.271129  -97.743700   \n",
+       "3 2007-05-02 17:11:53  2007-05  50.666480 -120.319200   \n",
+       "4 2007-04-20 18:17:23  2007-04  42.081156  -87.980216   \n",
+       "5 2007-08-19 13:33:24  2007-08  51.508530   -0.125740   \n",
+       "6 2007-04-12 03:40:27  2007-04  27.947520  -82.458430   \n",
+       "7 2007-10-03 06:57:04  2007-10 -27.467940  153.028090   \n",
+       "8 2007-07-12 17:49:09  2007-07  38.895110  -77.036370   \n",
+       "9 2006-12-17 19:43:09  2006-12  36.072640  -79.791980   \n",
+       "\n",
+       "                                        topic  sentiment  aggressiveness  \\\n",
+       "0                 Donald Trump versus Science  -0.604242  not aggressive   \n",
+       "1                               Global stance  -0.404815  not aggressive   \n",
+       "2     Ideological Positions on Global Warming  -0.515978  not aggressive   \n",
+       "3          Impact of Resource Overconsumption  -0.690117      aggressive   \n",
+       "4            Importance of Human Intervantion  -0.359227      aggressive   \n",
+       "5                                    Politics  -0.295054      aggressive   \n",
+       "6                Seriousness of Gas Emissions  -0.456556      aggressive   \n",
+       "7  Significance of Pollution Awareness Events  -0.737047      aggressive   \n",
+       "8               Undefined / One Word Hashtags   0.761608  not aggressive   \n",
+       "9                            Weather Extremes  -0.565028      aggressive   \n",
+       "\n",
+       "  gender  \n",
+       "0   male  \n",
+       "1   male  \n",
+       "2   male  \n",
+       "3   male  \n",
+       "4   male  \n",
+       "5   male  \n",
+       "6   male  \n",
+       "7   male  \n",
+       "8   male  \n",
+       "9   male  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by topics & merge with original df to get first posts for each topic\n",
+    "topics = data.groupby('topic')\n",
+    "topics['date'].count()\n",
+    "\n",
+    "early = topics['created_at'].min()\n",
+    "firsts = pd.merge(early, data, how='left')\n",
+    "firsts.head()\n",
+    "# Create new df of first 5-10 posts in each topic to show on map\n",
+    "# Display map of early posters over time"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Bin quartiles of sentiment value to isolate those with strong negative sentiments\n",
+    "# Create graph showing early posts by number/% aggressive/sentiment breakdown for one topic (maybe interactive?)\n",
+    "# stick to first few years on this one for more detail\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create overview for full time range - strongest negative sentiment & aggressive posts only\n",
+    "# What is the shape over time, are there waves, etc\n",
+    "# Line or bar chart, maybe scatter w/linear regression of some kind?"
+   ]
   }
  ],
  "metadata": {
