--- a/Tracking_Deniers_Over_Time.ipynb
+++ b/Tracking_Deniers_Over_Time.ipynb
@@ -37,6 +37,7 @@
     }
    ],
    "source": [
+    "# Import dependencies\n",
     "import hvplot.pandas\n",
     "import pandas as pd\n",
     "import matplotlib as plt\n"
@@ -175,14 +176,16 @@
     }
    ],
    "source": [
-    "# Read csv file & convert to appropriate datatypes\n",
+    "# Read csv file\n",
     "newfile = 'Resources/Climate_Deniers_Map.csv'\n",
     "df = pd.read_csv(newfile)\n",
     "\n",
+    "# Convert to appropriate data types & extract date column\n",
     "newdf = df.copy()\n",
     "newdf['created_at'] = df['created_at'].astype('datetime64')\n",
     "newdf['date'] = newdf['created_at'].dt.to_period('M')\n",
     "\n",
+    "# Organize columns & display data\n",
     "data = newdf.loc[:, ['date', 'lat', 'lng', 'topic', 'sentiment', 'aggressiveness', 'gender', 'created_at']]\n",
     "print(data.dtypes)\n",
     "data.head()\n"
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -280,61 +283,6 @@
        "      <td>aggressive</td>\n",
        "      <td>male</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2007-08-19 13:33:24</td>\n",
-       "      <td>2007-08</td>\n",
-       "      <td>51.508530</td>\n",
-       "      <td>-0.125740</td>\n",
-       "      <td>Politics</td>\n",
-       "      <td>-0.295054</td>\n",
-       "      <td>aggressive</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2007-04-12 03:40:27</td>\n",
-       "      <td>2007-04</td>\n",
-       "      <td>27.947520</td>\n",
-       "      <td>-82.458430</td>\n",
-       "      <td>Seriousness of Gas Emissions</td>\n",
-       "      <td>-0.456556</td>\n",
-       "      <td>aggressive</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2007-10-03 06:57:04</td>\n",
-       "      <td>2007-10</td>\n",
-       "      <td>-27.467940</td>\n",
-       "      <td>153.028090</td>\n",
-       "      <td>Significance of Pollution Awareness Events</td>\n",
-       "      <td>-0.737047</td>\n",
-       "      <td>aggressive</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2007-07-12 17:49:09</td>\n",
-       "      <td>2007-07</td>\n",
-       "      <td>38.895110</td>\n",
-       "      <td>-77.036370</td>\n",
-       "      <td>Undefined / One Word Hashtags</td>\n",
-       "      <td>0.761608</td>\n",
-       "      <td>not aggressive</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2006-12-17 19:43:09</td>\n",
-       "      <td>2006-12</td>\n",
-       "      <td>36.072640</td>\n",
-       "      <td>-79.791980</td>\n",
-       "      <td>Weather Extremes</td>\n",
-       "      <td>-0.565028</td>\n",
-       "      <td>aggressive</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -346,50 +294,37 @@
        "2 2007-04-07 15:26:24  2007-04  30.271129  -97.743700   \n",
        "3 2007-05-02 17:11:53  2007-05  50.666480 -120.319200   \n",
        "4 2007-04-20 18:17:23  2007-04  42.081156  -87.980216   \n",
-       "5 2007-08-19 13:33:24  2007-08  51.508530   -0.125740   \n",
-       "6 2007-04-12 03:40:27  2007-04  27.947520  -82.458430   \n",
-       "7 2007-10-03 06:57:04  2007-10 -27.467940  153.028090   \n",
-       "8 2007-07-12 17:49:09  2007-07  38.895110  -77.036370   \n",
-       "9 2006-12-17 19:43:09  2006-12  36.072640  -79.791980   \n",
        "\n",
-       "                                        topic  sentiment  aggressiveness  \\\n",
-       "0                 Donald Trump versus Science  -0.604242  not aggressive   \n",
-       "1                               Global stance  -0.404815  not aggressive   \n",
-       "2     Ideological Positions on Global Warming  -0.515978  not aggressive   \n",
-       "3          Impact of Resource Overconsumption  -0.690117      aggressive   \n",
-       "4            Importance of Human Intervantion  -0.359227      aggressive   \n",
-       "5                                    Politics  -0.295054      aggressive   \n",
-       "6                Seriousness of Gas Emissions  -0.456556      aggressive   \n",
-       "7  Significance of Pollution Awareness Events  -0.737047      aggressive   \n",
-       "8               Undefined / One Word Hashtags   0.761608  not aggressive   \n",
-       "9                            Weather Extremes  -0.565028      aggressive   \n",
-       "\n",
-       "  gender  \n",
-       "0   male  \n",
-       "1   male  \n",
-       "2   male  \n",
-       "3   male  \n",
-       "4   male  \n",
-       "5   male  \n",
-       "6   male  \n",
-       "7   male  \n",
-       "8   male  \n",
-       "9   male  "
+       "                                     topic  sentiment  aggressiveness gender  \n",
+       "0              Donald Trump versus Science  -0.604242  not aggressive   male  \n",
+       "1                            Global stance  -0.404815  not aggressive   male  \n",
+       "2  Ideological Positions on Global Warming  -0.515978  not aggressive   male  \n",
+       "3       Impact of Resource Overconsumption  -0.690117      aggressive   male  \n",
+       "4         Importance of Human Intervantion  -0.359227      aggressive   male  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Group by topics & merge with original df to get first posts for each topic\n",
+    "# Group by topics\n",
     "topics = data.groupby('topic')\n",
     "topics['date'].count()\n",
     "\n",
+    "# Merge with original df to get first post for each topic\n",
     "early = topics['created_at'].min()\n",
     "firsts = pd.merge(early, data, how='left')\n",
-    "firsts.head()\n",
+    "firsts.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create new df of first 5-10 posts in each topic to show on map\n",
     "# Display map of early posters over time"
    ]
