--- a/Tracking_Deniers_Over_Time.ipynb
+++ b/Tracking_Deniers_Over_Time.ipynb
@@ -667,9 +667,7 @@
     "# What is the shape over time, are there waves, etc\n",
     "# Line graph, maybe scatter w/linear regression of some kind?\n",
     "count['topic'].plot(kind='line', color='red')\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()\n"
    ]
   }
  ],
