add more meaningful comments

--- a/Tracking_Deniers_Over_Time.ipynb
+++ b/Tracking_Deniers_Over_Time.ipynb
@@ -9,8 +9,7 @@
     "# Import dependencies\n",
     "import hvplot.pandas\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -501,6 +500,7 @@
     }
    ],
    "source": [
+    "# Save copy of map (in spite of protestations...)\n",
     "hvplot.save(map1, \"Images/Earliest-Tweets-Map.png\")"
    ]
   },
@@ -643,12 +643,14 @@
     }
    ],
    "source": [
-    "# Create bins based on quartiles of sentiment value\n",
+    "# Find quartiles of sentiment value\n",
     "print(data['sentiment'].describe())\n",
     "\n",
+    "# Create bins to group sentiment by\n",
     "bins = [-1, -.5, -.2, 0, 1]\n",
     "names = [\"Very Low\", \"Low\", \"Average\", \"High\"]\n",
     "\n",
+    "# Cut dataset into sentiment groups by quartiles & display results\n",
     "data['Sentiment'] = pd.cut(data['sentiment'], bins, labels=names, include_lowest=True)\n",
     "data.head()\n"
    ]
@@ -670,34 +672,37 @@
     }
    ],
    "source": [
-    "# Create overview for full time range - strongest negative sentiment & aggressive posts only\n",
-    "\n",
+    "# Create 'years' column to group data by for broad overview plot\n",
     "yrs = data['date'].dt.year\n",
     "table = data.copy()\n",
     "table['year'] = yrs\n",
     "\n",
+    "# Create function to plot lines for each sentiment bin level\n",
     "def plot_sent(name, color):\n",
     "    df1 = table.loc[(table['Sentiment'] == name) & (table['aggressiveness'] == 'aggressive'), ['year', 'topic']].reset_index(drop=True)\n",
     "    df2 = table.loc[(table['Sentiment'] == name) & (table['aggressiveness'] != 'aggressive'), ['year', 'topic']].reset_index(drop=True)\n",
     "    count = df1.groupby('year').count()\n",
     "    count2 = df2.groupby('year').count()\n",
+    "\n",
+    "    # Plot a solid line for aggressive tweets and dotted line for non-aggressive tweets\n",
     "    count['topic'].plot(kind='line', color=color, label=name + \" - aggressive\")\n",
     "    count2['topic'].plot(kind='line', color=color, linestyle=\"--\", label=name + \" - non-aggressive\")\n",
     "\n",
+    "# Graph the lines in colors to represent the sentiment levels\n",
     "plot_sent('High', 'blue')\n",
     "plot_sent('Average', 'green')\n",
     "plot_sent('Low', 'orange')\n",
     "plot_sent('Very Low', 'red')\n",
     "\n",
-    "\n",
-    "# What is the shape over time, are there waves, etc\n",
-    "# Line graph, maybe scatter w/linear regression of some kind?\n",
+    "# Add other graph elements & display results\n",
     "plt.xlabel(\"Time of Tweet\")\n",
     "plt.ylabel(\"Number of Tweets\")\n",
     "plt.title(\"Broad Overview of Denier Tweets by Sentiment Level\")\n",
     "plt.legend(loc='best')\n",
     "plt.savefig(\"Images/Deniers-Sentiment-Overview.png\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# read up on og dataset documentation for more info on sentiment meaning - add analysis here"
    ]
   },
   {
@@ -706,8 +711,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create graph showing early posts by number/% aggressive/sentiment breakdown for one topic (maybe interactive?)\n",
-    "# stick to first few years on this one for more detail"
+    "# bar chart showing early posts by number/% aggressive/sentiment breakdown for one topic \n",
+    "# (maybe interactive?)\n",
+    "# stick to first few years on this one for more detail\n",
+    "# scatter plot/regression needed?"
    ]
   }
  ],
