--- a/Tracking_Deniers_Over_Time.ipynb
+++ b/Tracking_Deniers_Over_Time.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exploring Trends in the Spread of Misinformation\n",
+    "What trends might we uncover by isolating the tweets denying climate change?  Are there any patterns to find that would help make sense of the spread of misinformation on social media?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initial set up"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +154,7 @@
        "4      aggressive       male 2007-03-13 23:03:07  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,9 +162,7 @@
    "source": [
     "# Read csv file\n",
     "newfile = 'Resources/Climate_Deniers_Map.csv'\n",
-    "file2 = 'Resources/NA_sample_020.csv'\n",
     "df = pd.read_csv(newfile)\n",
-    "df2 = pd.read_csv(file2)\n",
     "\n",
     "# Convert to appropriate data types & extract date column\n",
     "newdf = df.copy()\n",
@@ -164,10 +177,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date                   period[M]\n",
+      "lat                      float64\n",
+      "lng                      float64\n",
+      "topic                     object\n",
+      "sentiment                float64\n",
+      "aggressiveness            object\n",
+      "gender                    object\n",
+      "created_at        datetime64[ns]\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>aggressiveness</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>40.441694</td>\n",
+       "      <td>-79.990086</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>-0.120697</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2018-01-31 20:40:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-03</td>\n",
+       "      <td>38.895110</td>\n",
+       "      <td>-77.036370</td>\n",
+       "      <td>Global stance</td>\n",
+       "      <td>-0.378573</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2018-03-15 21:28:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>44.000340</td>\n",
+       "      <td>-72.749830</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>-0.216689</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2018-09-29 14:42:56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>39.952330</td>\n",
+       "      <td>-75.163790</td>\n",
+       "      <td>Global stance</td>\n",
+       "      <td>-0.687731</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2018-10-08 22:23:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-12</td>\n",
+       "      <td>45.421106</td>\n",
+       "      <td>-75.690308</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>0.611834</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2018-12-16 11:52:40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      date        lat        lng             topic  sentiment  aggressiveness  \\\n",
+       "0  2018-01  40.441694 -79.990086          Politics  -0.120697      aggressive   \n",
+       "1  2018-03  38.895110 -77.036370     Global stance  -0.378573  not aggressive   \n",
+       "2  2018-09  44.000340 -72.749830          Politics  -0.216689  not aggressive   \n",
+       "3  2018-10  39.952330 -75.163790     Global stance  -0.687731  not aggressive   \n",
+       "4  2018-12  45.421106 -75.690308  Weather Extremes   0.611834  not aggressive   \n",
+       "\n",
+       "   gender          created_at  \n",
+       "0    male 2018-01-31 20:40:44  \n",
+       "1    male 2018-03-15 21:28:05  \n",
+       "2  female 2018-09-29 14:42:56  \n",
+       "3  female 2018-10-08 22:23:50  \n",
+       "4    male 2018-12-16 11:52:40  "
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Read 2nd csv file for later tests...\n",
+    "file2 = 'Resources/NA_sample_020.csv'\n",
+    "df2 = pd.read_csv(file2)\n",
+    "\n",
     "# Convert to appropriate data types & extract date column\n",
     "newdf2 = df2.copy()\n",
     "newdf2['created_at'] = df2['created_at'].astype('datetime64')\n",
@@ -177,6 +321,13 @@
     "d2 = newdf2.loc[:, ['date', 'lat', 'lng', 'topic', 'sentiment', 'aggressiveness', 'gender', 'created_at']]\n",
     "print(d2.dtypes)\n",
     "d2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Collect earliest tweets from climate deniers in our dataset to see what geographic trends we might uncover:"
    ]
   },
   {
@@ -510,6 +661,7 @@
    "metadata": {},
    "source": [
     "### Analysis notes...\n",
+    "climate denial has been around since late 90s and found its way onto twitter almost since the beginning of twitters existence, with the first denier tweet in our dataset in december of 2006\n",
     "majority of twitter users & majority of climate change discourse originates in the US\n",
     "no major discernible patterns in geographic locations to the spread, most of\n",
     "the early posts come from coastal or near-coastal regions, regardless of country/continent\n",
@@ -556,6 +708,13 @@
    "source": [
     "# Save copy of map (in spite of protestations...)\n",
     "hvplot.save(full, \"Images/Earliest-Tweets-Map.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Group sentiment values into quartile bins to evaluate trends in climate denier sentiment over time:"
    ]
   },
   {
@@ -749,16 +908,29 @@
     "plot_sent('Very Low', 'red')\n",
     "\n",
     "# Add other graph elements & display results\n",
-    "\n",
     "plt.xlabel(\"Time of Tweet\")\n",
     "plt.ylabel(\"Number of Tweets\")\n",
     "plt.title(\"Broad Overview of Denier Tweets by Sentiment Level\")\n",
     "plt.legend(loc='best')\n",
     "plt.savefig(\"Images/Deniers-Sentiment-Overview.png\")\n",
-    "plt.show()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis notes\n",
+    "sentiment seems to refer to overall positive or negative language of the tweet rather than its support of climate change in particular - this is why we see some tweets with high sentiment scores for climate deniers - this would be, for example, a denier communicating with another denier they are in agreement with - this is what we would expect to see on social media sites, especially during times of high engagement, either strong positive or negative emotions being the norm and a lot less neutral statements - here on the graph we can see that \"average\" sentiment is consistently lowest across the whole timeframe\n",
     "\n",
-    "# read up on og dataset documentation for more info on sentiment meaning - add analysis here\n",
-    "# may reconsider & take a different approach for this one...scatter plot instead or some other approach?"
+    "both low & high sentiments are also consistently favored by the platform at all times, and noticably, very low sentiment tweets have a tendency to be aggressive more often than they are non-aggressive among climate deniers, particularly during times of high engagement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Closer analysis of early tweets on each topic to see what trends emerge in aggression and sentiment over time:"
    ]
   },
   {
@@ -823,11 +995,133 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Analysis notes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>aggressiveness</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>created_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01</td>\n",
+       "      <td>40.441694</td>\n",
+       "      <td>-79.990086</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>-0.120697</td>\n",
+       "      <td>aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2018-01-31 20:40:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-03</td>\n",
+       "      <td>38.895110</td>\n",
+       "      <td>-77.036370</td>\n",
+       "      <td>Global stance</td>\n",
+       "      <td>-0.378573</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2018-03-15 21:28:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-09</td>\n",
+       "      <td>44.000340</td>\n",
+       "      <td>-72.749830</td>\n",
+       "      <td>Politics</td>\n",
+       "      <td>-0.216689</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2018-09-29 14:42:56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-10</td>\n",
+       "      <td>39.952330</td>\n",
+       "      <td>-75.163790</td>\n",
+       "      <td>Global stance</td>\n",
+       "      <td>-0.687731</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2018-10-08 22:23:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-12</td>\n",
+       "      <td>45.421106</td>\n",
+       "      <td>-75.690308</td>\n",
+       "      <td>Weather Extremes</td>\n",
+       "      <td>0.611834</td>\n",
+       "      <td>not aggressive</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2018-12-16 11:52:40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      date        lat        lng             topic  sentiment  aggressiveness  \\\n",
+       "0  2018-01  40.441694 -79.990086          Politics  -0.120697      aggressive   \n",
+       "1  2018-03  38.895110 -77.036370     Global stance  -0.378573  not aggressive   \n",
+       "2  2018-09  44.000340 -72.749830          Politics  -0.216689  not aggressive   \n",
+       "3  2018-10  39.952330 -75.163790     Global stance  -0.687731  not aggressive   \n",
+       "4  2018-12  45.421106 -75.690308  Weather Extremes   0.611834  not aggressive   \n",
+       "\n",
+       "   gender          created_at  \n",
+       "0    male 2018-01-31 20:40:44  \n",
+       "1    male 2018-03-15 21:28:05  \n",
+       "2  female 2018-09-29 14:42:56  \n",
+       "3  female 2018-10-08 22:23:50  \n",
+       "4    male 2018-12-16 11:52:40  "
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2.head()\n",
+    "# ANOVA w/control group from NA batch?"
+   ]
   }
  ],
  "metadata": {
