--- a/Individual_Contributors/Tracking_Deniers_Over_Time.ipynb
+++ b/Individual_Contributors/Tracking_Deniers_Over_Time.ipynb
@@ -464,7 +464,7 @@
     "    Importance of Human Intervantion, Politics, Seriousness of Gas Emissions, \n",
     "    Significance of Pollution Awareness Events, Undefined / One Word Hashtags \"\"\"\n",
     "\n",
-    "one_topic = use_this[use_this['topic'] == \"Donald Trump versus Science\"]\n",
+    "one_topic = use_this[use_this['topic'] == \"Donald Trump versus Science\"]  # <-- Add topic here\n",
     "\n",
     "\"\"\" uncomment the next code line to activate above topic instead of all topics \"\"\"\n",
     "\n",
