Added all comments to Q1 file

--- a/Individual_Contributors/Question1_Trends_NA.ipynb
+++ b/Individual_Contributors/Question1_Trends_NA.ipynb
@@ -308,10 +308,10 @@
    ],
    "source": [
     "# Create new df with column with month and date\n",
-    "dates = pd.to_datetime(df[\"created_at\"], infer_datetime_format=True)\n",
-    "df_month = df.loc[:, [\"created_at\", \"lat\", \"lng\", \"sentiment\", \"topic\", \"stance\", \"gender\", \"aggressiveness\"]]\n",
-    "df_month[\"created_at\"] = dates\n",
-    "df_month['date'] = df_month['created_at'].dt.to_period('M')\n",
+    "dates = pd.to_datetime(df[\"created_at\"], infer_datetime_format=True)    #Make variable where the created_at column is converted to datetime\n",
+    "df_month = df.loc[:, [\"created_at\", \"lat\", \"lng\", \"sentiment\", \"topic\", \"stance\", \"gender\", \"aggressiveness\"]]  # Make smaller DF with just a few of the columms\n",
+    "df_month[\"created_at\"] = dates  # Change the \"created_at\" column to the converted date time values\n",
+    "df_month['date'] = df_month['created_at'].dt.to_period('M') # Make a new column where the month and year are extracted from the dates\n",
     "\n",
     "#Add a column for the year\n",
     "df_month['year'] = df_month['created_at'].dt.year\n",
@@ -482,14 +482,14 @@
     "#Loop through df and change the ag factor to 0 1 depending on the agressiveness\n",
     "for index, row in df_month.iterrows():\n",
     "    if row[\"aggressiveness\"] == \"aggressive\":\n",
-    "        df_month.loc[index, \"aggressiveness_factor\"] = 100.0\n",
+    "        df_month.loc[index, \"aggressiveness_factor\"] = 100.0    # If the tweet is categorized as aggressive, give a factor of 100\n",
     "    else:\n",
-    "        df_month.loc[index, \"aggressiveness_factor\"] = 0.0 \n",
+    "        df_month.loc[index, \"aggressiveness_factor\"] = 0.0      # otherwise 0\n",
     "\n",
     "    if row[\"stance\"] == \"believer\":\n",
-    "        df_month.loc[index, \"stance_factor\"] = 100.0\n",
+    "        df_month.loc[index, \"stance_factor\"] = 100.0    # If the tweet is categorized as coming from a climate change believer, give a factor value of 100\n",
     "    else:\n",
-    "        df_month.loc[index, \"stance_factor\"] = 0.0\n",
+    "        df_month.loc[index, \"stance_factor\"] = 0.0  # iF the Tweet is that of a denier or of neutral status, give it a factor value of 0\n",
     "\n",
     "df_month.head()"
    ]
@@ -540,6 +540,7 @@
     "#Plot \n",
     "axes = df_averages.plot(subplots=True, figsize=(10, 10))\n",
     "\n",
+    "# For each plot, make a vertical line for dates where it looks like there is a change in the trend\n",
     "axes[0].set_ylabel(\"Aggressive Tweets %\")\n",
     "axes[0].axvline(pd.to_datetime(\"2014-03-01\"), color='r', linestyle='--', label = \"Apr 2014\")\n",
     "axes[0].axvline(pd.to_datetime(\"2015-11-01\"), color='k', linestyle='--', label = \"~2016 Election Kickoff\")\n",
@@ -571,7 +572,13 @@
    "source": [
     "## Analysis\n",
     "\n",
-    "blah"
+    "The percent of aggressive tweets is  gradually decreasing over time. The percentage of tweets that support the belief of climate change is increasing overall. The average sentiment for each month fluctuates and contains smaller trends.\n",
+    "\n",
+    "Before early 2014, there is higher variability in the data and any trends present. Starting in early 2014, some clear and more steady and positive trends appear in the percentage of tweets that support climate change and that have positive sentiment. Separate research shows that in 2014, the world experienced many climate related natural disaster starting with wildfires in early 2014 in Australia and heat waves in Canada and Alaska. \n",
+    "\n",
+    "Starting in late 2015, the sentiment switches from steadily increasing, to steadily decreasing. The percentage of tweets supporting climate change stops increasing and begins to decrease. The percent of aggressive tweets stops decreasing, and increases slight. These trends end in mid 2017. The start of these trends coincides with the ramping up of the 2016 election cycle which had climate change as a major devicisve talking point/issue. The trend ends in mid-late 2017. A notible climate change event that may have had an import was the US leaving the Paris Climate Agreement in June 2017.\n",
+    "\n",
+    "A large jump in the average sentiment and the percent of tweet that believe in climate change occurs in the Fall of 2017, after which the data becomes more variable. The percentage of aggressive tweets begins to decrease again. "
    ]
   },
   {
@@ -600,12 +607,13 @@
     }
    ],
    "source": [
+    "# Create a df where the data is grouped by the year and the stance of the tweet. Count the number of tweets in each category\n",
     "stance_df = df_month.groupby([\"year\", \"stance\"])[\"gender\"].count()\n",
     "\n",
     "fig, axes = plt.subplots(nrows=2, ncols=1, figsize=(8, 12))\n",
     "\n",
-    "stance_df.unstack().plot(kind='bar', stacked=True, ax=axes[0])\n",
-    "stance_df.unstack().plot(kind = \"bar\", stacked = True, ax=axes[1], logy= True)\n",
+    "stance_df.unstack().plot(kind='bar', stacked=True, ax=axes[0]) # make one plot have a linear y axis\n",
+    "stance_df.unstack().plot(kind = \"bar\", stacked = True, ax=axes[1], logy= True)  # make a plot with a logarithmic y axis\n",
     "\n",
     "axes[0].set_xlabel(\"Year\")\n",
     "axes[0].set_ylabel(\"# of Tweets\")\n",
@@ -624,7 +632,9 @@
    "source": [
     "### Analysis:\n",
     "\n",
-    "blah"
+    "The number of tweets about climate change decreases from 2019 to 2012. After 2012 there is a rapid increase in the number of tweets per year about climate change. The increase appears exponential. The increase in the number of tweets could be due to an increase in the numner of consumers joining Twitter or the increased politcal attention to climate change starting in 2015/2016 in the 2016 election cycle. A rapid increase could also be related to Greta Thunberg entering the international stage in 2018 and garnering a large Twitter following. \n",
+    "\n",
+    "The second graph was made with the same data but uses a logarithmic scale to better examine how the number of believer, neutral, and deniers tweets changed over time. It is clear that the changes are explonential. It is less clear how the number of believer tweets is changing compared to the number of denier tweets. "
    ]
   },
   {
@@ -682,9 +692,9 @@
     }
    ],
    "source": [
-    "x_values = [x for x in range(len(df_2012))] #list(df_stance[\"date\"])\n",
-    "y = list(df_2012[\"stance_factor\"])\n",
-    "y_values = [y for y in y]\n",
+    "x_values = [x for x in range(len(df_2012))] # Make a list of integers to represent the number of months since February 2012 to make it easier to conduct exponential regressions\n",
+    "y = list(df_2012[\"stance_factor\"])  # Make the dependent variable the stances (the percent of believer tweets)\n",
+    "y_values = [y for y in y]   # Make the y values just a list \n",
     "len(y_values)"
    ]
   },
@@ -694,15 +704,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the function that the data will be fit to\n",
     "def func_exp(x, a, b, c):\n",
     "        return a * np.exp(b * x) + c\n",
     "\n",
-    "\n",
+    "# Conver the variables into arrays\n",
     "x_data = np.array(x_values) \n",
     "y_data = np.array(y_values)\n",
     "\n",
+    "# Regression! \n",
     "popt, pcov = curve_fit(func_exp, x_data, y_data, p0 = (-1, 0.01, 1))\n",
     "\n",
+    "# Write the equation for Believers! \n",
     "expo_eq = \"y = \" + str(round(popt[0],2)) + \"(\"+ str(round(popt[1],5)) + \")^x + \" + str(round(popt[2],2))  \n"
    ]
   },
@@ -872,7 +885,8 @@
     "df_deniers = df_month.copy()\n",
     "df_deniers[\"denier_factor\"] = \" \"\n",
     "\n",
-    "#Loop through df and change the ag factor to 0 1 depending on the agressiveness\n",
+    "#Loop through df and change the ag factor to 0 100 depending on the agressiveness\n",
+    "# This time only give the deniers a 100 factor! Believers and neutral tweets are given a value of 0. This will give jiust the percentage of tweets that are denier\n",
     "for index, row in df_deniers.iterrows():\n",
     "    if row[\"stance\"] == \"denier\":\n",
     "        df_deniers.loc[index, \"denier_factor\"] = 100.0\n",
@@ -888,8 +902,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make a df of the average percentage of denier tweets for each month\n",
     "df_avdeniers = df_deniers.groupby(\"date\")[\"denier_factor\"].mean() \n",
     "\n",
+    "# Make sure that there is a date column converted to datetime\n",
     "df_den = df_avdeniers.to_frame()\n",
     "df_den.reset_index(inplace=True)\n",
     "df_den[\"date\"] = df_den[\"date\"].astype(\"datetime64\")\n",
@@ -904,7 +920,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values_2 = [x for x in range(len(df_2012_den))] #list(df_stance[\"date\"])\n",
+    "# Define x and y axis variables.\n",
+    "x_values_2 = [x for x in range(len(df_2012_den))]   # Make a list of integers instead of time so it is easier to perform regression\n",
     "y_2 = list(df_2012_den[\"denier_factor\"])\n",
     "y_values_2 = [y for y in y_2]"
    ]
@@ -926,16 +943,19 @@
     }
    ],
    "source": [
+    "# Define the function that the data will be fit to\n",
     "def func_exp(x, a, b, c):\n",
     "        return a * np.exp(b * x) + c\n",
     "\n",
+    "# Put variables into arrrays \n",
     "x_data_2 = np.array(x_values_2) \n",
     "y_data_2 = np.array(y_values_2)\n",
     "\n",
+    "#Regression! \n",
     "popt_2, pcov_2 = curve_fit(func_exp, x_data_2, y_data_2, p0 = (-1, 0.001, 1))\n",
     "\n",
-    "expo_eq_2 = \"y = \" + str(round(popt_2[0],2)) + \"(\"+ str(round(popt_2[1],5)) + \")^x + \" + str(round(popt_2[2],2))  \n",
-    "expo_eq_2"
+    "# Make equation for denier regression\n",
+    "expo_eq_2 = \"y = \" + str(round(popt_2[0],2)) + \"(\"+ str(round(popt_2[1],5)) + \")^x + \" + str(round(popt_2[2],2))  "
    ]
   },
   {
@@ -964,19 +984,19 @@
     }
    ],
    "source": [
-    "#\n",
+    "# Plot using subplots \n",
     "regression_stance, axs = plt.subplots(2, 1, figsize=(6, 8), sharey=True)\n",
     "\n",
     "axs[0].scatter(x_data, y_data)\n",
     "axs[0].plot(x_data, func_exp(x_data, *popt), color = \"red\")\n",
-    "axs[0].annotate(expo_eq,(25, 12),fontsize=15,color=\"red\") # Graphing the linear equation on the plot \n",
+    "axs[0].annotate(expo_eq,(25, 12),fontsize=15,color=\"red\") # Graphing the  equation on the plot \n",
     "axs[0].set_ylabel(\"'%' of Tweets from Believers\")\n",
     "\n",
     "axs[1].scatter(x_data_2, y_data_2)\n",
     "axs[1].plot(x_data_2, func_exp(x_data_2, *popt_2), color = \"red\")\n",
     "axs[1].set_ylabel(\"'%' of Tweets from Deniers\")\n",
     "axs[1].set_xlabel(\"Number of Months\")\n",
-    "axs[1].annotate(expo_eq_2,(25,42),fontsize=15,color=\"red\") # Graphing the linear equation on the plot \n",
+    "axs[1].annotate(expo_eq_2,(25,42),fontsize=15,color=\"red\") # Graphing the  equation on the plot \n",
     "\n",
     "\n",
     "\n",
