--- a/Individual_Contributors/Tracking_Deniers_Over_Time.ipynb
+++ b/Individual_Contributors/Tracking_Deniers_Over_Time.ipynb
@@ -554,7 +554,7 @@
     "\n",
     "full = map1 * map2\n",
     "\n",
-    "# Save copy of map\n",
+    "# Save copy of map (this usually requires extra downloads to accomplish for most users)\n",
     "try:\n",
     "    hvplot.save(full, \"../Images/Earliest-Tweets-Map.png\")\n",
     "except Exception as e:\n",
