--- a/Individual_Contributors/us_disasters.ipynb
+++ b/Individual_Contributors/us_disasters.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4                              NaN                   30000.0  81.101659  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "Name: Disaster Subtype, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "3343                              NaN                    2000.0  92.708822  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "3291                              NaN                 2700000.0  92.708822  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "2209                              NaN                  200000.0  87.984603  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "4396                16500000.0  98.219991  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1047,7 @@
        "844                              NaN                 7000000.0  84.215229  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "4306                              NaN                95000000.0  95.878166  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
        "3291                              NaN                 2700000.0  92.708822  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
        "4  Weather Extremes  believer    male  not aggressive  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
        "4  Weather Extremes  believer    male  not aggressive  2018-12-16  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
        "4  Weather Extremes  believer    male  not aggressive  2018-12-16  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
        "1219  not aggressive  2017-09-12  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
        "320  2018-11-29  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,7 @@
        "608          Politics   neutral    male  not aggressive  2015-05-28  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2364,7 @@
        "6053  Weather Extremes    denier       male      aggressive  2017-08-25  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2507,7 +2507,7 @@
        "2205  Weather Extremes  believer    male      aggressive  2018-11-28  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
        "3275  Weather Extremes  believer    male  not aggressive  2015-06-11  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2704,12 +2704,13 @@
     "plt.text(17.5, 150, 'Hurricane Harvey Ends', color='purple', rotation=90)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../Images/Q3Hurricane.png')"
+    "plt.savefig('../Images/Q3Hurricane.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2741,12 +2742,13 @@
     "plt.text(.63, 1100, 'CA Wildfire Ends', color='purple', rotation=90)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../Images/Q3Wildfire.png')"
+    "plt.savefig('../Images/Q3Wildfire.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2778,7 +2780,8 @@
     "plt.text(20.25, 300, 'Wimberley Flood Ends', color='purple', rotation=90)\n",
     "\n",
     "plt.tight_layout\n",
-    "plt.savefig('../Images/Q3Flood.png')"
+    "plt.savefig('../Images/Q3Flood.png')\n",
+    "plt.show()"
    ]
   },
   {
